--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	<body>
 		<!--This is where HTML elements and text go-->
 		<div id="map"></div>
+        <div id="mouseCoordinatesBox"></div>
 
 		<!--Script links go below elements-->
 		
